# pg-llm-batch

./: .gitignore  CLAUDE.md  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: fuzz.yml
docker/postgres/: Dockerfile  postgresql.conf.custom
docker/postgres/init/: 01_extensions.sql  02_schema.sql  03_cron_batch_retrieval.sql
docker/postgres/patches/: pg_tiktoken_o200k.patch
docs/papers/: README.md
fuzz/: README.md  __init__.py  fuzz_build_json_entry.py  fuzz_byte_accounting.py  fuzz_config_roundtrip.py  fuzz_parse_results.py  run_atheris.sh  targets.py
fuzz/corpus/build_json_entry/: chat_basic  embedding  no_system  quotes_newlines  unicode
fuzz/corpus/byte_accounting/: ascii  controls  unicode
fuzz/corpus/config_roundtrip/: bool_true  garbage_json  int_val  json_list  no_dot  unknown_key
fuzz/corpus/parse_results/: blank_lines  malformed  multi  nested  single  unicode
pg_llm_batch/: __init__.py  __main__.py  batch_api_client.py  bootstrap.py  cli.py  config.py  db.py  exceptions.py  health.py  models.py  orchestrator.py  schema.sql  token_counter.py
tests/: __init__.py  conftest.py  test_batch_api_client.py  test_batch_assembly.py  test_bootstrap_cli.py  test_config.py  test_db.py  test_exceptions.py  test_health.py  test_integration_pg.py  test_supply_chain.py  test_token_counter.py
tests/fuzz/: test_fuzz_properties.py
