[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-llm-batch"
version = "0.1.0"
description = "Standalone + submodule Postgres LLM batch engine: pg_tiktoken token counting + batch submit/poll/retrieve"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "ContextualWisdomLab" }]
keywords = ["postgres", "llm", "batch", "pg_tiktoken", "tokenization"]
dependencies = [
    "psycopg[binary]>=3.1",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
secrets = ["cryptography>=41"]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "cryptography>=41",
]

[project.scripts]
pg-llm-batch = "pg_llm_batch.cli:main"

[project.urls]
Homepage = "https://github.com/ContextualWisdomLab/pg-llm-batch"

[tool.setuptools]
packages = ["pg_llm_batch"]

[tool.setuptools.package-data]
pg_llm_batch = ["schema.sql"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a live pg_tiktoken + pg_cron Postgres container",
]
asyncio_mode = "auto"
